--- a/css world package/09 color-background-color package/background.html
+++ b/css world package/09 color-background-color package/background.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>background</title>
 </head>
 <body>
-  
+  <!-- positionX = (容器的宽度 - 图片的宽度) * percentX
+       positionY = (容器的高度 - 图片的高度) * percentY
+  -->
 </body>
 </html>
