--- a/css world package/12 direction package/index.html
+++ b/css world package/12 direction package/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>direction</title>
+  <style>
+    
+  </style>
 </head>
 <body>
-  
+  <p dir="rtl">
+    <img src="../images/girl.jpg" alt="美女">
+    <img src="../images/bird.jpg" alt="风景">
+  </p>
+  <script>
+    
+  </script>
 </body>
 </html>
