--- a/css secrets package/05 字体排印 package/01 连字符断行.html
+++ b/css secrets package/05 字体排印 package/01 连字符断行.html
@@ -7,14 +7,17 @@
   <title>连字符断行</title>
   <style>
     p {
-      width: 250px;
+      width: 200px;
+    }
+    /* 好像影响不大 */
+    .hf-p1 {
       hyphens: auto;
     }
+  
   </style>
 </head>
 <body>
-  <p>
-    hello hang-feng day day up, hello ying-ying are you beautiful!
-  </p>
+  <p class="hf-p">The only way to get rid of a temptation is to yield to id</p>
+  <p class="hf-p1">The only way to get rid of a temptation is to yield to id</p>
 </body>
 </html>
