--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,28 @@
   <title>css</title>
 </head>
 <body>
-  hello css
+
+  <div class="triangle"></div>
+
+  <button class="triangle ib"></button>
+
+  <span class="triangle ft"></span>
+
+
+  <div class="triangle1"></div>
+
+  <button class="triangle1 ib1"></button>
+
+  <span class="triangle1"></span>
+
+
+
+  <div class="triangle2"></div>
+
+  <button class="triangle2 ib1"></button>
+  <!--
+
+  <span class="triangle2"></span> -->
+
 </body>
 </html>
