fix: relearn css3

--- a/src/index.html
+++ b/src/index.html
@@ -4,30 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>css</title>
+  <style>
+
+  </style>
 </head>
 <body>
+  <div class="reveal">sword art online</div>
+  <script>
 
-  <div class="triangle"></div>
-
-  <button class="triangle ib"></button>
-
-  <span class="triangle ft"></span>
-
-
-  <div class="triangle1"></div>
-
-  <button class="triangle1 ib1"></button>
-
-  <span class="triangle1"></span>
-
-
-
-  <div class="triangle2"></div>
-
-  <button class="triangle2 ib1"></button>
-  <!--
-
-  <span class="triangle2"></span> -->
-
+  </script>
 </body>
 </html>
