--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    .parent {
-      columns: 3;
-      gap: 30px
-    }
-    .child {
-      border: 1px solid #eee;
-    }
-  </style>
-</head>
-<body>
-  <div class="parent">
-    <div class="child">1</div>
-    <div class="child">2</div>
-    <div class="child">3</div>
-    <div class="child">4</div>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      .div p {
+        color: yellow;
+      }
+      .p {
+        color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="div">
+      <p class="p">hello world</p>
+    </div>
+
+
+
+    <ul class="cs-module-ul">
+      <li class="cs-module-li cs-module-li-first">列表1</li>
+      <li class="cs-module-li">列表2</li>
+      <li class="cs-module-li">列表3</li>
+    </ul>
+    <style>
+      .cs-module-li {margin-top: 20px;}
+      .cs-module-li-first {margin-top: 0;}
+    </style>
+
+    <style>
+      .cs-module-li {margin-top: 20px;}
+      .cs-module-li:first-child {margin-top: 0;}
+    </style>
+    <style>
+      .cs-module-li:not(:first-child) { margin-top: 0;}
+    </style>
+
+    <ul class="cs-module-ul">
+      <li class="cs-module-li">列表1</li>
+      <li class="cs-module-li">列表2</li>
+      <li class="cs-module-li">列表3</li>
+    </ul>
+  </body>
 </html>
