--- a/index.html
+++ b/index.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .div p {
-        color: yellow;
-      }
-      .p {
-        color: red;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="div">
-      <p class="p">hello world</p>
-    </div>
-
-
-
-    <ul class="cs-module-ul">
-      <li class="cs-module-li cs-module-li-first">列表1</li>
-      <li class="cs-module-li">列表2</li>
-      <li class="cs-module-li">列表3</li>
-    </ul>
-    <style>
-      .cs-module-li {margin-top: 20px;}
-      .cs-module-li-first {margin-top: 0;}
-    </style>
-
-    <style>
-      .cs-module-li {margin-top: 20px;}
-      .cs-module-li:first-child {margin-top: 0;}
-    </style>
-    <style>
-      .cs-module-li:not(:first-child) { margin-top: 0;}
-    </style>
-
-    <ul class="cs-module-ul">
-      <li class="cs-module-li">列表1</li>
-      <li class="cs-module-li">列表2</li>
-      <li class="cs-module-li">列表3</li>
-    </ul>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    .dl {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      gap: 1em;
+    }
+    dd {
+      text-align: right;
+    }
+  </style>
+</head>
+<body>
+  <dl class="dl">
+    <dt>手机系统</dt>
+    <dd>Android</dd>
+    <dt>登录方式</dt>
+    <dd>QQ互联登录</dd>
+    <dt>绑定事件</dt>
+    <dd>2019-01-02 00:01</dd>
+    <dt>绑定状态</dt>
+    <dd></dd>
+    <dt>备注</dt>
+    <dd>如果需要修改绑定，请联系HR进行修改</dd>
+  </dl>
+</body>
 </html>
